feat: add ckeditor5-full-screen plugin and update editor configuration
- Added ckeditor5-full-screen as a dependency in package.json.
- Imported FullScreen plugin in src/ckeditor.js and included it in the Editor's builtinPlugins.
- Updated the default configuration to include the fullscreen option.
- Removed unnecessary renderMathPanel method from EditorType in typings.
- Updated yarn.lock to include ckeditor5-full-screen dependency.

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "dependencies": {
     "@yayure/ckeditor5-mathlive": "^41.4.0",
+    "ckeditor5-full-screen": "^0.0.2",
     "mathlive": "^0.108.2"
   }
 }
